# kafka-tui

./: Cargo.toml  README.md
src/: console_consumer_group.rs  debug_cluster_metadata.rs  formatting.rs  kafka.rs  main.rs  read_consumer_group_offsets.rs  text_utils.rs  tui.rs
src/kafka/: consumer_offsets.rs
src/tui/: consumer_group_view.rs  help_view.rs  summary_view.rs  theme.rs  topic_view.rs
